Added additional changes for frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Alpha Vantage API Configuration
-alpha.vantage.api.key=<>
+alpha.vantage.api.key=8LLNQEUE47STZ63H
 alpha.vantage.base-url=https://www.alphavantage.co
